extra spacing in safari fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -329,6 +329,7 @@ h2 {
 	padding: 3px;
 	width: 150px;
 	height: 150px;
+	background-color: #252525;
 	background-size: 100%;
 	background-repeat: no-repeat;
   background-clip: border-box;
